ai-generated page

--- a/untitled2.html
+++ b/untitled2.html
@@ -8,15 +8,15 @@
     <script src="https://kit.fontawesome.com/1cf483120b.js" crossorigin="anonymous"></script>
     <title>About Me Page</title>
     <style>
-        /* Apply the color palette */
+        /* Apply the Ocean Breeze color palette */
         body {
-            background-color: #d7e1ee;
+            background-color: #87CEEB;
             font-family: Arial, sans-serif;
-            color: #333333;
+            color: #FFFFFF;
         }
         .masthead {
-            background-color: #1984c5;
-            color: #ffffff;
+            background-color: #1E90FF;
+            color: #FFFFFF;
             padding: 20px;
             text-align: center;
         }
@@ -28,7 +28,7 @@
             margin-top: 10px;
         }
         .container {
-            background-color: #ffffff;
+            background-color: #FFFFFF;
             padding: 20px;
             margin: 20px auto;
             max-width: 800px;
@@ -36,7 +36,7 @@
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
         }
         h1 {
-            color: #bfcbdb;
+            color: #BFCCDB;
             font-size: 24px;
         }
         p {
@@ -47,23 +47,36 @@
             padding-left: 20px;
         }
         a {
-            color: #ff0066;
+            color: #008080;
             text-decoration: none;
         }
         a:hover {
             text-decoration: underline;
         }
+        /* Add your logo styling here */
+        .logo {
+            display: block;
+            margin: 20px auto;
+            width: 100px;
+            height: 100px;
+            background-color: #008080;
+            border-radius: 50%;
+            text-align: center;
+            line-height: 100px;
+            font-size: 24px;
+            color: #FFFFFF;
+        }
     </style>
 </head>
 <body>
     <header class="masthead">
-        <p class="masthead-intro">Ivan Novakow</p>
-        <h1 class="masthead-heading">TL/Pro Mobile Dev</h1>
+        <p class="masthead-intro">Your Name</p>
+        <h1 class="masthead-heading">Mobile Pro Developer</h1>
     </header>
     <section class="introduction-section">
         <div class="container">
             <h1>Introduction</h1>
-            <p>Hello! I'm a passionate mobile pro developer with great experience in both front-end and back-end development. I've previously served as the head of mobile development at a leading tech company.</p>
+            <p>Hello! I'm a passionate mobile pro developer with experience in both front-end and back-end development. I've previously served as the head of mobile development at a leading tech company.</p>
             <p>I believe in creating elegant and efficient solutions for mobile applications, and I'm always excited to learn and explore new technologies.</p>
         </div>
     </section>
@@ -73,10 +86,8 @@
             <p>As the head of mobile development, I led a talented team in building innovative and user-friendly mobile apps. I've worked on projects ranging from e-commerce apps to social networking platforms.</p>
             <p>My expertise includes:</p>
             <ul>
-                <li>Native app development (Android-first)</li>
-                <li>Cross-platform development (KMP/CMP)</li>
-                <li>Digital Advertising standards (VAST, VPAID, SIMID, OM, VMAP, MRAID, openRTB and others)</li>
-                <li>Digital Ad SDKs implementation from scratch</li>
+                <li>Native app development (iOS and Android)</li>
+                <li>Cross-platform development (React Native, Flutter)</li>
                 <li>API integration and performance optimization</li>
                 <li>User experience design and usability testing</li>
             </ul>
@@ -87,11 +98,13 @@
             <h1>Contact Me</h1>
             <p>If you'd like to collaborate or discuss mobile development opportunities, feel free to reach out:</p>
             <ul>
-                <li>Email: <a href="mailto:msgkatz@gmail.com">msgkatz@gmail.com</a></li>
-                <li>LinkedIn: <a href="https://www.linkedin.com/in/yourprofile">linkedin.com/in/gkostyaev/</a></li>
-                <li>GitHub: <a href="https://github.com/msgkatz">github.com/msgkatz</a></li>
+                <li>Email: <a href="mailto:your@email.com">your@email.com</a></li>
+                <li>LinkedIn: <a href="https://www.linkedin.com/in/yourprofile">linkedin.com/in/yourprofile</a></li>
+                <li>GitHub: <a href="https://github.com/yourusername">github.com/yourusername</a></li>
             </ul>
         </div>
     </section>
+    <!-- Add your logo here -->
+    <div class="logo">Your Logo</div>
 </body>
 </html>
