--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <h1>Contact Me</h1>
             <p>If you'd like to collaborate or discuss mobile development opportunities, feel free to reach out:</p>
             <ul>
-                <li>Email: <a href="mailto:msgkatz@gmail.com">msgkatz@gmail.com</a></li>
+                <li>Email: <a href="mailto:msgkatz@icloud.com">msgkatz@icloud.com</a></li>
                 <li>LinkedIn: <a href="https://www.linkedin.com/in/yourprofile">linkedin.com/in/gkostyaev/</a></li>
                 <li>GitHub: <a href="https://github.com/msgkatz">github.com/msgkatz</a></li>
             </ul>
