new page design

--- a/untitled2.html
+++ b/untitled2.html
@@ -2,109 +2,47 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <script src="https://kit.fontawesome.com/1cf483120b.js" crossorigin="anonymous"></script>
-    <title>About Me Page</title>
+    <title>About Me</title>
     <style>
-        /* Apply the Ocean Breeze color palette */
         body {
-            background-color: #87CEEB;
             font-family: Arial, sans-serif;
-            color: #FFFFFF;
+            background-color: #f4f4f4;
+            margin: 0;
+            padding: 0;
         }
-        .masthead {
-            background-color: #1E90FF;
-            color: #FFFFFF;
-            padding: 20px;
+        header {
+            background-color: #4CAF50;
+            color: white;
             text-align: center;
+            padding: 1em;
         }
-        .masthead-intro {
-            font-size: 18px;
-        }
-        .masthead-heading {
-            font-size: 36px;
-            margin-top: 10px;
-        }
-        .container {
-            background-color: #FFFFFF;
+        section {
             padding: 20px;
-            margin: 20px auto;
-            max-width: 800px;
-            border-radius: 5px;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            margin: 20px;
+            background-color: white;
         }
-        h1 {
-            color: #BFCCDB;
-            font-size: 24px;
+        h1, h2 {
+            text-align: center;
         }
         p {
             line-height: 1.6;
         }
-        ul {
-            list-style: disc;
-            padding-left: 20px;
-        }
-        a {
-            color: #008080;
-            text-decoration: none;
-        }
-        a:hover {
-            text-decoration: underline;
-        }
-        /* Add your logo styling here */
-        .logo {
-            display: block;
-            margin: 20px auto;
-            width: 100px;
-            height: 100px;
-            background-color: #008080;
-            border-radius: 50%;
-            text-align: center;
-            line-height: 100px;
-            font-size: 24px;
-            color: #FFFFFF;
-        }
     </style>
 </head>
 <body>
-    <header class="masthead">
-        <p class="masthead-intro">Your Name</p>
-        <h1 class="masthead-heading">Mobile Pro Developer</h1>
+    <header>
+        <h1>About Me</h1>
     </header>
-    <section class="introduction-section">
-        <div class="container">
-            <h1>Introduction</h1>
-            <p>Hello! I'm a passionate mobile pro developer with experience in both front-end and back-end development. I've previously served as the head of mobile development at a leading tech company.</p>
-            <p>I believe in creating elegant and efficient solutions for mobile applications, and I'm always excited to learn and explore new technologies.</p>
-        </div>
+    <section>
+        <h2>Mobile Pro Developer</h2>
+        <p>Hello, I am [Your Name], a seasoned professional in mobile app development with a passion for creating innovative and user-friendly mobile applications. With [X] years of experience in the industry, I have successfully led teams and delivered high-quality mobile solutions to clients across various domains.</p>
+        <h2>Ex-Head of Mobile Development</h2>
+        <p>As the former head of mobile development at [Previous Company Name], I played a pivotal role in driving the development of cutting-edge mobile applications. My leadership and technical expertise empowered my team to excel in delivering impactful solutions that met and exceeded client expectations.</p>
+        <h2>Skills and Expertise</h2>
+        <p>My skill set includes proficiency in native and cross-platform mobile development, UI/UX design, agile methodologies, and a deep understanding of the latest trends and technologies in the mobile industry. I am dedicated to staying at the forefront of mobile innovation and leveraging my knowledge to create compelling and robust applications.</p>
+        <h2>Contact Me</h2>
+        <p>If you're interested in collaborating on a mobile project or discussing potential opportunities, feel free to reach out to me at [Your Email Address]. I'm always open to exploring new ventures and contributing to exciting mobile initiatives.</p>
     </section>
-    <section class="experience-section">
-        <div class="container">
-            <h1>Professional Experience</h1>
-            <p>As the head of mobile development, I led a talented team in building innovative and user-friendly mobile apps. I've worked on projects ranging from e-commerce apps to social networking platforms.</p>
-            <p>My expertise includes:</p>
-            <ul>
-                <li>Native app development (iOS and Android)</li>
-                <li>Cross-platform development (React Native, Flutter)</li>
-                <li>API integration and performance optimization</li>
-                <li>User experience design and usability testing</li>
-            </ul>
-        </div>
-    </section>
-    <section class="contact-section">
-        <div class="container">
-            <h1>Contact Me</h1>
-            <p>If you'd like to collaborate or discuss mobile development opportunities, feel free to reach out:</p>
-            <ul>
-                <li>Email: <a href="mailto:your@email.com">your@email.com</a></li>
-                <li>LinkedIn: <a href="https://www.linkedin.com/in/yourprofile">linkedin.com/in/yourprofile</a></li>
-                <li>GitHub: <a href="https://github.com/yourusername">github.com/yourusername</a></li>
-            </ul>
-        </div>
-    </section>
-    <!-- Add your logo here -->
-    <div class="logo">Your Logo</div>
 </body>
 </html>
