--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
             <div class="footer__inner">
                 <div class="footer__content"><span>© 2024</span>
                     <span><a href="https://creativecommons.org/licenses/by-nc/4.0/" target="_blank" rel="noopener">CC BY-NC 4.0</a></span>
-                    <span><a href="https://msgkatz.github.io/posts/index.xml" target="_blank" title="rss">
+                    <!-- <span><a href="https://msgkatz.github.io/posts/index.xml" target="_blank" title="rss"> -->
+                    <span><a href="https://msgkatz.github.io/index_old.html" target="_blank" title="msgkatz">
                         <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 20 20" fill="none" stroke="currentcolor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-rss">
                                 <path d="M4 11a9 9 0 019 9"></path>
                                 <path d="M4 4a16 16 0 0116 16"></path>
